--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus_shortname:   taylantatli
 #bing-verify:
 #email:
 
-github-url:         username
+github-url:         https://github.com/carensky
 instagram:          username
 
 # Gems
