--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                '안녕하세요, 저의 포트폴리오를 방문해 주셔
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/student.png'
+logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
