--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              정원
-bio:                '안녕하세요, 저의 포트폴리오를 방문해 주셔서 감사합니다.'
+bio:                '안녕하세요, 저의 포트폴리오를 방문해 주셔서 감사합니다 !'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
